0.3.3 2026-01-29
    - Introduce announcements (diewald)

0.3.2 2025-09-29
    - Bugfix: export of queries containing curly brackets (closes #61 )(hebasta)
    - CI: Build docker image also on tag push (kupietz)
    - Upgrade Jersey to 4.0.0
    - Upgrade other dependencies following dependabot

0.3.1 2024-10-9
    - Produces export template as service (hebasta)
    - Produces export template on the command line  (hebasta)
    - Produces information of usage on the command line (hebasta)
    - Single properties can now be overwritten through self-defined property file (closes #128)(hebasta)

0.3.0 2024-6-21
    - Upgrade to Java 17.
    - Upgrade Jetty to 11.0.12.
    - Upgrade Jersey to 3.1.7.
    - Upgrade dependencies following dependabot.
    - Fixes md014 violations in README. (hebasta)
    - Fixes bug: Tests did not run because of maven-surefire-plugin
      configuration (hebasta)

0.2.11 2024-1-10
    - Upgrade dependency on Jackson following dependabot.
    - Upgrade dependency on Maven following dependabot.
    - Retrieves the version of the export plugin from pom.xml
      (closes #99)(hebasta)

0.2.10 2023-11-30
    - Change default api port to 443.
    - Update dependency of logback-classic.
    - Add warning regarding protected data.
    - Do not rely on cookie path for session riding.

      This fixes a security issue! Please update!

0.2.9 2023-10-4
    - Remove Cobertura to be compatible with
      Java 11.
    - Upgrade dependencies following dependabot.
    - Exclude module-info in pom (removes warning)
    - Remove unnecessary imports
    - Update deprecated Configuration constructor
    - Add Dockerfile.

0.2.8 2022-10-05
    - Upgrade dependencies following dependabot.
      This fixes CVE-2022-42003! Please update!

0.2.7 2021-10-13
    - Upgrade dependency on Junit following dependabot.
    - Upgrade dependency on Jackson following dependabot.
    - Upgrade dependency on Jetty following dependabot.