@@ -10,7 +10,10 @@ package de.ids_mannheim.korap.plkexport;
 
 import java.io.*;
 import java.lang.String;
+import java.util.HashMap;
+import java.util.Map;
 import java.util.Properties;
+import java.util.function.Function;
 
 import org.tinylog.Logger;
 
@@ -20,6 +23,41 @@ public class ExWSConf {
     private static String VERSION;
 
     private static Properties prop;
+
+    // Environment provider function (can be overridden for testing)
+    private static Function<String, String> envProvider = System::getenv;
+
+    // Mapping from environment variable names to property names
+    private static final Map<String, String> ENV_TO_PROP = new HashMap<>();
+    static {
+        // Server configuration
+        ENV_TO_PROP.put("KALAMAR_EXPORT_SERVER_PORT", "server.port");
+        ENV_TO_PROP.put("KALAMAR_EXPORT_SERVER_HOST", "server.host");
+        ENV_TO_PROP.put("KALAMAR_EXPORT_SERVER_SCHEME", "server.scheme");
+        ENV_TO_PROP.put("KALAMAR_EXPORT_SERVER_ORIGIN", "server.origin");
+        
+        // API configuration
+        ENV_TO_PROP.put("KALAMAR_EXPORT_API_PORT", "api.port");
+        ENV_TO_PROP.put("KALAMAR_EXPORT_API_HOST", "api.host");
+        ENV_TO_PROP.put("KALAMAR_EXPORT_API_SCHEME", "api.scheme");
+        ENV_TO_PROP.put("KALAMAR_EXPORT_API_SOURCE", "api.source");
+        ENV_TO_PROP.put("KALAMAR_EXPORT_API_PATH", "api.path");
+        
+        // Asset configuration
+        ENV_TO_PROP.put("KALAMAR_EXPORT_ASSET_HOST", "asset.host");
+        ENV_TO_PROP.put("KALAMAR_EXPORT_ASSET_PORT", "asset.port");
+        ENV_TO_PROP.put("KALAMAR_EXPORT_ASSET_SCHEME", "asset.scheme");
+        ENV_TO_PROP.put("KALAMAR_EXPORT_ASSET_PATH", "asset.path");
+        
+        // General configuration
+        ENV_TO_PROP.put("KALAMAR_EXPORT_PAGE_SIZE", "conf.page_size");
+        ENV_TO_PROP.put("KALAMAR_EXPORT_MAX_EXP_LIMIT", "conf.max_exp_limit");
+        ENV_TO_PROP.put("KALAMAR_EXPORT_FILE_DIR", "conf.file_dir");
+        ENV_TO_PROP.put("KALAMAR_EXPORT_DEFAULT_HITC", "conf.default_hitc");
+        
+        // Cookie configuration
+        ENV_TO_PROP.put("KALAMAR_EXPORT_COOKIE_NAME", "cookie.name");
+    }
 
     /*
      * Returns version of the Export Plugin
@@ -49,6 +87,20 @@ public class ExWSConf {
      */
     public static void clearProp(){
         prop = null;
+    }
+
+    /*
+     * Sets a custom environment provider function.
+     * This is useful for testing environment variable overrides
+     * without actually setting system environment variables.
+     * Pass null to reset to the default System.getenv provider.
+     */
+    public static void setEnvironmentProvider(Function<String, String> provider) {
+        if (provider == null) {
+            envProvider = System::getenv;
+        } else {
+            envProvider = provider;
+        }
     }
 
     /**
@@ -94,6 +146,8 @@ public class ExWSConf {
     * Returns export properties 
     * The properties in exportPlugin.conf are the default properties
     * which can be overwritten by the properties in propFile.
+    * Environment variables have the highest priority and override both
+    * config file values.
     */
     public static Properties properties (String propFile) {
      
@@ -106,8 +160,39 @@ public class ExWSConf {
         if (propFile != null){
             loadProp(prop, propFile);
         }
+        
+        // Apply environment variable overrides
+        applyEnvironmentOverrides(prop);
     
         return prop;
     };
+
+    /*
+     * Apply environment variable overrides to the properties.
+     * Environment variables have the highest priority.
+     */
+    private static void applyEnvironmentOverrides(Properties props) {
+        for (Map.Entry<String, String> entry : ENV_TO_PROP.entrySet()) {
+            String envValue = getEnvironmentVariable(entry.getKey());
+            if (envValue != null && !envValue.isEmpty()) {
+                props.setProperty(entry.getValue(), envValue);
+            }
+        }
+    }
+
+    /*
+     * Get an environment variable value using the configured provider.
+     */
+    protected static String getEnvironmentVariable(String name) {
+        return envProvider.apply(name);
+    }
+
+    /*
+     * Returns the mapping of environment variable names to property names.
+     * Useful for documentation and testing.
+     */
+    public static Map<String, String> getEnvToPropertyMapping() {
+        return new HashMap<>(ENV_TO_PROP);
+    }
 
 }
